style(ZNTA-2318): also prevent 'needs work' word wrapping in keyselect mode

--- a/server/zanata-frontend/src/app/editor/components/Dropdown/index.css
+++ b/server/zanata-frontend/src/app/editor/components/Dropdown/index.css
@@ -97,8 +97,8 @@ not conflict with the other frontend code
   background-color: var(--Dropdown-item-hover-color-bg);
 }
 
-.TransUnit-panelFooter .EditorDropdown .EditorButton {
-  min-width: 15px;
+.TransUnit-panelFooter .EditorDropdown-content .EditorButton {
+  padding-right: .5rem;
 }
 
 /**
